delete script, add react_react dom

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
       type="font/woff2"
       crossorigin="anonymous"
     />
-    <script src="vendors/react-with-dom.js"></script>
+    <!-- React -->
+    <script
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.production.min.js"
+    ></script>
+    <!-- ReactDOM -->
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
+    ></script>
     <link rel="stylesheet" type="text/css" href="reset.css" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
@@ -21,7 +30,7 @@
     <footer class="footer">
       <ul class="footer__list">
         <li class="footer__item">
-          <a class="footer__link" href="/">Помощь ВСЕМ ПРИВЕТ!</a>
+          <a class="footer__link" href="/">Помощь</a>
         </li>
         <li class="footer__item">
           <a class="footer__link" href="/">Обратная связь</a>
